# mcp-gtw

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  nginx.conf  pyproject.toml  render.yaml
.claude/: settings.json
.github/workflows/: ci.yml  release.yml
docs/: admin.md  architecture.md  auth-recipes.md  browser-console.md  configuration.md  deployment.md  extensibility.md  gateway-library.md  mcp-clients.md  provider-protocol.md  provider-sdk.md  quickstart.md  security.md  testing.md
src/mcp_gtw/: authenticator.py  channel.py  codec.py  compiled_tool.py  config.py  errors.py  expiry.py  gateway.py  json_websocket.py  listeners.py  main.py  origin.py  pending_request.py  protocol.py  registry.py  tokens.py
src/mcp_gtw/helpers/: security.py
src/mcp_gtw/web/: admin.html  index.html  site.webmanifest
tests/: conftest.py  support.py  test_entrypoints.py
tests/gateway/: test_auth_recipes.py  test_authenticator.py  test_channel.py  test_codec.py  test_concurrency.py  test_config.py  test_expiry.py  test_extensibility.py  test_gateway.py  test_listeners.py  test_origin.py  test_protocol.py  test_registry.py  test_security.py  test_stress.py  test_tokens.py
