[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "mcp-gtw"
version = "0.0.3"
description = "A generic MCP gateway whose tools are registered and executed asynchronously by browser applications over WebSocket."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
keywords = ["mcp", "model-context-protocol", "gateway", "websocket", "browser", "tools"]
dependencies = [
    "fastapi>=0.139,<1",
    "jsonschema>=4.26,<5",
    "mcp>=1.28,<2",
    "pydantic-settings>=2.14,<3",
    "uvicorn[standard]>=0.51,<1",
]

[project.urls]
Homepage = "https://github.com/mcp-gtw/mcp-gtw"
Repository = "https://github.com/mcp-gtw/mcp-gtw"

[project.optional-dependencies]
dev = [
    "httpx>=0.28,<1",
    "pytest>=9,<10",
    "pytest-asyncio>=1.4,<2",
    "pytest-cov>=7,<8",
    "ruff>=0.15,<1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_gtw"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src", "tests"]

[tool.coverage.run]
branch = true
source = ["mcp_gtw"]

[tool.coverage.report]
fail_under = 100
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    ": \\.\\.\\.$",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC", "RUF", "SIM"]

[tool.ruff.lint.isort]
known-first-party = ["mcp_gtw"]
